Thu Aug 16 04:30:45 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* variable.c (rb_path2class): get rid of dangling pointer caused by
	  optimized out value.

Thu Aug 16 04:24:28 2007  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/dl/lib/dl/win32.rb: seems that dl doesn't accept void argument.
	  fixed [ruby-bugs:PR#5489].

Thu Aug 16 04:23:44 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/rdoc/parsers/parse_c.rb (RDoc::C_Parser): handle more
	  extensions.  [ruby-dev:30972]

Thu Aug 16 04:14:17 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* process.c (ruby_setreuid, ruby_setregid): rename to get rid of name
	  clash.
Thu Aug 16 04:11:17 2007  Ryan Davis  <ryand@zenspider.com>

	* lib/rexml/dtd/dtd.rb: Fixed typo in code. Fixes bug #10420

Thu Aug 16 04:08:20 2007  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/net/imap.rb (ResponseParser#next_token): fixed
	  error message. (backported from HEAD)

	* lib/net/imap.rb (ResponseParser#parse_error): fixed
	  the condition not to refer @token.symbol unexpectedly.
	  Thanks, Dick Monahan. (backported from HEAD)

Thu Aug 16 04:05:20 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* marshal.c (w_extended): erroneous check condition when dump
	  method is defined.  [ruby-core:10646]

Sat Jun  9 10:40:00 2007  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* stable version 1.8.5-p52 released.

Thu Jun  7 14:53:46 2007  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* eval.c (method_inspect): show proper class name.
	  [ruby-talk:248647], Thanks Calamitas.

Mon May 28 19:37:24 2007  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (move_to_next_entry): revert r12338. not necessary
	  on ruby_1_8_5.

Sun May 27 05:52:37 2007  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* eval.c (mnew): call of super via a method object should work again.
	  [ruby-talk:248647], Thanks Calamitas.

	* test/ruby/test_method.rb (TestMethod::test_method_super): test for
	  above fix.
