@@ -2,7 +2,7 @@
 #define RUBY_RELEASE_DATE "2007-08-16"
 #define RUBY_VERSION_CODE 185
 #define RUBY_RELEASE_CODE 20070816
-#define RUBY_PATCHLEVEL 60
+#define RUBY_PATCHLEVEL 61
 
 #define RUBY_VERSION_MAJOR 1
 #define RUBY_VERSION_MINOR 8
